--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 </head>
 <body>
     <div>
-        <a href="/api/all.html">API</a>
-        <a href="/page/">Page</a>
+        <a href="./api/all.html">API</a>
+        <a href="./page/">Page</a>
     </div>
     
 </body>
