--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 </head>
 <body>
     <div>
-        <a href="./Emoji_Page-React/api/all.html">API</a>
-        <a href="./Emoji_Page-React/page/">Page</a>
+        <a href="./api/all.html">API</a>
+        <a href="./page/">Page</a>
     </div>
     
 </body>
